# brisby

./: .gitignore  Cargo.toml  README.md
crates/brisby-client/: Cargo.toml
crates/brisby-client/src/: config.rs  downloader.rs  lib.rs  local_index.rs  main.rs  network.rs  seeder.rs
crates/brisby-client/tests/: integration.rs
crates/brisby-core/: Cargo.toml
crates/brisby-core/src/: chunk.rs  error.rs  lib.rs  nym_transport.rs  proto.rs  transport.rs  types.rs
crates/brisby-dht/: Cargo.toml
crates/brisby-dht/src/: lib.rs  routing.rs  storage.rs
crates/brisby-index/: Cargo.toml
crates/brisby-index/src/: handler.rs  main.rs  search.rs
docs/: DESIGN.md
proto/: brisby.proto
scripts/: integration-test.sh
