[package]
name = "brisby-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Brisby P2P file sharing client"

[[bin]]
name = "brisby"
path = "src/main.rs"

[dependencies]
brisby-core = { workspace = true }
brisby-dht = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Nym SDK - TODO: enable when integrating
# nym-sdk = { workspace = true }

# Database
rusqlite = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
dirs = "5"
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
