[package]
name = "brisby-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Brisby P2P file sharing client"

[lib]
name = "brisby_client"
path = "src/lib.rs"

[[bin]]
name = "brisby"
path = "src/main.rs"

[features]
default = []
# Enable real Nym SDK integration
nym = ["brisby-core/nym"]

[dependencies]
brisby-core = { workspace = true }
brisby-dht = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Database
rusqlite = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }
dirs = "5"
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
