[package]
name = "brisby-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, protocols, and utilities for Brisby P2P file sharing"

[features]
default = []
# Enable real Nym SDK integration (large dependency, slow compile)
nym = ["nym-sdk"]

[dependencies]
# Serialization
prost = { workspace = true }
serde = { workspace = true }

# Hashing
blake3 = { workspace = true }

# Async runtime (needed for transport trait)
tokio = { workspace = true }

# Nym SDK (optional, feature-gated)
nym-sdk = { git = "https://github.com/nymtech/nym.git", tag = "nym-binaries-v2025.21-mozzarella", optional = true }

# Utilities
thiserror = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
bitvec = { workspace = true }

# prost-build requires protoc, skip for now
# [build-dependencies]
# prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
