[package]
name = "brisby-index"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Brisby index provider server"

[[bin]]
name = "brisby-index"
path = "src/main.rs"

[dependencies]
brisby-core = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Nym SDK - TODO: enable when integrating
# nym-sdk = { workspace = true }

# Database
rusqlite = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
